set(target shootet)

include_directories(
	 ${CMAKE_SOURCE_DIR}/src
	 ${CMAKE_SOURCE_DIR}/src/envisioned2d
)

set(sources
	main.cpp
	Level.cpp
	Quad.hpp
	config.cpp
	Multiplier.hpp
	Rocket.hpp
	Quad.cpp
	Mainmenu.hpp
	Camera.cpp
	CMakeLists.txt
	Mainmenu.cpp
	media.cpp
	Gui.cpp
	Level.hpp
	Item.cpp
	Player.cpp
	Game.cpp
	Game.hpp
	Highscore.hpp
	Pause.hpp
	Item.hpp
	Pause.cpp
	MorphTile.cpp
	Camera.hpp
	media.hpp
	config.hpp
	Multiplier.cpp
	Player.hpp
	Highscore.cpp
	Gui.hpp
	Rocket.cpp
	MorphTile.hpp
	envisioned2d
	envisioned2d/font
	envisioned2d/font/font.hpp
	envisioned2d/font/font.cpp
	envisioned2d/font/ImageFont.hpp
	envisioned2d/font/ImageFont.cpp
	envisioned2d/font/TtfLabel.hpp
	envisioned2d/font/__assert.hpp
	envisioned2d/font/TtfLabel.cpp
	envisioned2d/font/__assert.cpp
	envisioned2d/font/TtfFont.cpp
	envisioned2d/font/TtfFont.hpp
	envisioned2d/error
	envisioned2d/error/Exception.tpp
	envisioned2d/error/Exception.tpp.cbTemp
	envisioned2d/error/Exception.hpp
	envisioned2d/error/Exception.cpp
	envisioned2d/TODO
	envisioned2d/gfx
	envisioned2d/gfx/ImageClipping.cpp
	envisioned2d/gfx/ColorFading.cpp
	envisioned2d/gfx/Frame.cpp
	envisioned2d/gfx/Image.cpp
	envisioned2d/gfx/ImageFading.cpp
	envisioned2d/gfx/ImageFading.hpp
	envisioned2d/gfx/__assert.hpp
	envisioned2d/gfx/Color.cpp
	envisioned2d/gfx/gfx.cpp
	envisioned2d/gfx/ColorFading.hpp
	envisioned2d/gfx/__assert.cpp
	envisioned2d/gfx/gfx.hpp
	envisioned2d/gfx/Frame.hpp
	envisioned2d/gfx/SDL_gfx
	envisioned2d/gfx/SDL_gfx/INSTALL
	envisioned2d/gfx/SDL_gfx/SDL_gfxPrimitives_font.h
	envisioned2d/gfx/SDL_gfx/SDL_framerate.h
	envisioned2d/gfx/SDL_gfx/SDL_gfxPrimitives.h
	envisioned2d/gfx/SDL_gfx/AUTHORS
	envisioned2d/gfx/SDL_gfx/SDL_framerate.c
	envisioned2d/gfx/SDL_gfx/SDL_gfxBlitFunc.h
	envisioned2d/gfx/SDL_gfx/SDL_gfxPrimitives.c
	envisioned2d/gfx/SDL_gfx/SDL_imageFilter.h
	envisioned2d/gfx/SDL_gfx/SDL_rotozoom.c
	envisioned2d/gfx/SDL_gfx/LICENSE
	envisioned2d/gfx/SDL_gfx/README
	envisioned2d/gfx/SDL_gfx/SDL_rotozoom.h
	envisioned2d/gfx/SDL_gfx/COPYING
	envisioned2d/gfx/SDL_gfx/SDL_imageFilter.c
	envisioned2d/gfx/SDL_gfx/SDL_gfxBlitFunc.c
	envisioned2d/gfx/SDL_gfx/NEWS
	envisioned2d/gfx/Fading.hpp
	envisioned2d/gfx/Animation.hpp
	envisioned2d/gfx/Animation.cpp
	envisioned2d/gfx/Fading.cpp
	envisioned2d/gfx/Image.hpp
	envisioned2d/gfx/ImageClipping.hpp
	envisioned2d/gfx/Color.hpp
	envisioned2d/audio
	envisioned2d/audio/Sound.cpp
	envisioned2d/audio/SoundPlayer.cpp
	envisioned2d/audio/Playlist.hpp
	envisioned2d/audio/Track.cpp
	envisioned2d/audio/Sound.hpp
	envisioned2d/audio/MusicPlayer.cpp
	envisioned2d/audio/__assert.hpp
	envisioned2d/audio/MusicPlayer.hpp
	envisioned2d/audio/audio.cpp
	envisioned2d/audio/Playlist.cpp
	envisioned2d/audio/__assert.cpp
	envisioned2d/audio/audio.hpp
	envisioned2d/audio/SoundPlayer.hpp
	envisioned2d/audio/Track.hpp
	envisioned2d/input
	envisioned2d/input/Input.cpp
	envisioned2d/input/Input.hpp
	envisioned2d/input/__assert.hpp
	envisioned2d/input/__assert.cpp
	envisioned2d/etc
	envisioned2d/etc/bit.tpp
	envisioned2d/etc/Alignment.cpp
	envisioned2d/etc/int.cpp
	envisioned2d/etc/Alignment.tpp
	envisioned2d/etc/Alignment.hpp
	envisioned2d/etc/bit.h
	envisioned2d/etc/int.h
	envisioned2d/framework.hpp
	envisioned2d/tmx
	envisioned2d/tmx/render
	envisioned2d/tmx/render/Map.cpp
	envisioned2d/tmx/render/Map.hpp
	envisioned2d/tmx/tmx.hpp
	envisioned2d/tmx/base
	envisioned2d/tmx/base/LayerTile.hpp
	envisioned2d/tmx/base/Map.cpp
	envisioned2d/tmx/base/Layer.hpp
	envisioned2d/tmx/base/Properties.cpp
	envisioned2d/tmx/base/Properties.hpp
	envisioned2d/tmx/base/Object.hpp
	envisioned2d/tmx/base/LayerTile.cpp
	envisioned2d/tmx/base/Objectgroup.hpp
	envisioned2d/tmx/base/Map.hpp
	envisioned2d/tmx/base/Object.cpp
	envisioned2d/tmx/base/Tileset.hpp
	envisioned2d/tmx/base/TileLayer.hpp
	envisioned2d/tmx/base/TilesetTile.cpp
	envisioned2d/tmx/base/Objectgroup.cpp
	envisioned2d/tmx/base/TileLayer.cpp
	envisioned2d/tmx/base/TilesetTile.hpp
	envisioned2d/tmx/base/Layer.cpp
	envisioned2d/tmx/base/Tileset.cpp
	envisioned2d/geo
	envisioned2d/geo/Vector.hpp
	envisioned2d/geo/Rect.tpp
	envisioned2d/geo/Circle.tpp
	envisioned2d/geo/Point.tpp
	envisioned2d/geo/Vector.tpp
	envisioned2d/geo/Rect.hpp
	envisioned2d/geo/Circle.hpp
	envisioned2d/geo/Size.tpp
	envisioned2d/geo/Size.hpp
	envisioned2d/geo/Point.hpp
	envisioned2d/geo/geo.hpp
	envisioned2d/geo/geo.tpp
	envisioned2d/particle
	envisioned2d/particle/ParticleFrame.hpp
	envisioned2d/particle/Particle.hpp
	envisioned2d/particle/Particle.cpp
	envisioned2d/particle/ParticleProfile.cpp
	envisioned2d/particle/ParticleManager.hpp
	envisioned2d/particle/ParticleProfile.hpp
	envisioned2d/particle/ParticleFrame.cpp
	envisioned2d/particle/ParticleManager.cpp
	envisioned2d/collision
	envisioned2d/collision/RectMapClipping.hpp
	envisioned2d/collision/RasterMap.hpp
	envisioned2d/collision/PixelMap.cpp
	envisioned2d/collision/RasterMap.tpp
	envisioned2d/collision/RasterMapClipping.hpp
	envisioned2d/collision/RectMap.tpp
	envisioned2d/collision/PixelMapClipping.hpp
	envisioned2d/collision/collision.hpp
	envisioned2d/collision/RectMap.cpp
	envisioned2d/collision/PixelMap.tpp
	envisioned2d/collision/CollMapClipping.tpp
	envisioned2d/collision/RasterMap.cpp
	envisioned2d/collision/PixelMap.hpp
	envisioned2d/collision/RectMap.hpp
	envisioned2d/collision/CollMapClipping.hpp
	envisioned2d/xml
	envisioned2d/xml/Xml.hpp
	envisioned2d/xml/tinyxml
	envisioned2d/xml/tinyxml/tinystr.cpp
	envisioned2d/xml/tinyxml/tinyxml.cpp
	envisioned2d/xml/tinyxml/tinyxmlparser.cpp
	envisioned2d/xml/tinyxml/tinystr.h
	envisioned2d/xml/tinyxml/tinyxmlerror.cpp
	envisioned2d/xml/tinyxml/tinyxml.h
	envisioned2d/xml/XmlVisitor.cpp
	envisioned2d/xml/Xml.cpp
	envisioned2d/xml/XmlVisitor.hpp
	envisioned2d/util
	envisioned2d/util/Highscore.hpp
	envisioned2d/util/Path.hpp
	envisioned2d/util/Random.tpp
	envisioned2d/util/Timer.tpp
	envisioned2d/util/Random.hpp
	envisioned2d/util/etc.hpp
	envisioned2d/util/std.tpp
	envisioned2d/util/Config.hpp
	envisioned2d/util/Path.cpp
	envisioned2d/util/Timer.hpp
	envisioned2d/util/Timer.cpp
	envisioned2d/util/Movement.cpp
	envisioned2d/util/Highscore.cpp
	envisioned2d/util/etc.tpp
	envisioned2d/util/std.hpp
	envisioned2d/util/out.cpp
	envisioned2d/util/out.hpp
	envisioned2d/util/Csv.cpp
	envisioned2d/util/Csv.hpp
	envisioned2d/util/Config.cpp
	envisioned2d/util/FpsCounter.cpp
	envisioned2d/util/string.hpp
	envisioned2d/util/string.cpp
	envisioned2d/util/FpsCounter.hpp
	envisioned2d/util/out.tpp
	envisioned2d/util/util.hpp
	envisioned2d/util/std.cpp
	envisioned2d/util/Movement.hpp
	envisioned2d/framework.cpp
)

add_executable(${target} ${sources})

target_link_libraries(${target} 
	SDL
	SDL_mixer
	SDL_image
	SDL_ttf
)

